--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -11,7 +11,7 @@ engines:
   coffeelint:
     enabled: true
   csslint:
-    enabled: truex
+    enabled: true
   duplication:
     enabled: true
     config:
